# kaioken

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
Formula/: kaioken.rb
examples/: README.md  auth-flow.toml  capacity-test.toml  e-commerce.toml  rest-api.toml  sample.har  spike-test.toml
examples/ci/: Jenkinsfile  README.md  github-actions.yml  gitlab-ci.yml
src/: cli.rs  config.rs  main.rs  types.rs
src/compare/: diff.rs  display.rs  mod.rs
src/engine/: aggregator.rs  arrival_rate.rs  mod.rs  prometheus.rs  runner.rs  scheduler.rs  snapshot.rs  stats.rs  thresholds.rs  worker.rs  ws_aggregator.rs  ws_stats.rs  ws_worker.rs
src/grpc/: client.rs  mod.rs  types.rs
src/http/: client.rs  mod.rs  request.rs
src/http3/: client.rs  mod.rs
src/import/: har.rs  mod.rs
src/output/: csv.rs  html.rs  json.rs  markdown.rs  mod.rs
src/tui/: app.rs  flavor.rs  mod.rs  theme.rs  ui.rs
src/tui/widgets/: latency.rs  mod.rs  power.rs  status.rs
src/ws/: client.rs  message.rs  mod.rs
tests/: cli.rs  compare.rs  config.rs  load_test.rs
