[package]
name = "kaioken"
version = "0.1.0"
edition = "2021"
description = "A Rust-based HTTP load testing tool with real-time terminal UI and DBZ flavor"
license = "MIT"
repository = "https://github.com/lance0/kaioken"
keywords = ["load-testing", "http", "benchmark", "tui"]
categories = ["command-line-utilities", "development-tools::profiling"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["gzip", "brotli", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
hdrhistogram = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
humantime = "2"
humantime-serde = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
